--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             HSL Color Picker
           </a>
         </td>
-        <td>A color picker based on HSL color system.<td>
+        <td>A color picker based on HSL color system.</td>
         <td>Canvas</td>
         <td>2019.10</td>
       </tr>
